src/App.css
.App {
  text-align: center;
  background-color: lightgray;
  height: 100%;
  min-height: 100vh;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.content {
  display: flex;
  flex-direction: column;
}

.appToolbar {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%
}

.atAGlance {
  display: flex;
  flex-direction: row;
  align-content: center;
  justify-content: center;
  width: 90vw;
  align-self: center;
  margin-bottom: 20px
}

.statComps {
  display: flex;
  flex-direction: column;
}

.oneTeam {
  margin: 5px;
}

.closeButton {
  align-self: flex-start;
  margin-top: 20px;
  margin-left: 20px;
  width: fit-content
}

.charts {
  width: 90vw;
  align-self: center;
  margin-top: 10px;
  margin-bottom: 25px;
  display: flex;
  flex-direction: row;
  align-content: center;
  justify-content: center;
  flex-wrap: wrap;
}

.content {
  background-color: lightgray;
  height: auto
}

.loading {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: darkgray
}

.teamName {
  margin-top: 0px;
  margin-bottom: 0px;
}

.scatterChart {
  width: 800px;
  align-self: center;
  margin-top: 25px;
}

#scatterCont {
  align-self: center;
  justify-self: center;
  width: 1000px;
  align-content: center;
}

#appBarLeft {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

#appHeader {
  width: 1000px;
  align-self: center;
}

#atAGlanceContainer {
  display: flex;
  flex-direction: row;
  width: 1220px;
  justify-content: center;
  align-items: center;
  padding-top: 40px;
}

#fabButton {
  align-self: flex-start;
  margin-top: 10px;
  margin-left: 10px;
}

#oppBarHeader {
  margin-top: 0;
}

#oppList {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.barChart {
  width: 500px;
  margin: 10px
}

#headerContent {
  padding-top: 15px;
  padding-bottom: 15px;
}

#logoContainer {
  margin-right: 20px;
}

#loadingScreen {
  background-color: lightgray;
  height: 100vh
}

#main {
  height: 100vh
}

#polarChart {
  height: 400px
}

#rtgChartHeader {
  padding: 15px;
}

#statTable {
  width: 90vw;
  align-self: center;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

